Spacing Fix

--- a/src/Components/InstantConsultationBooking/FindDoctorSearchIC/FindDoctorSearchIC.css
+++ b/src/Components/InstantConsultationBooking/FindDoctorSearchIC/FindDoctorSearchIC.css
@@ -72,19 +72,13 @@
     display: flex;
     align-items: center;
     width: 430px;
-    margin-top: 25px;
+    margin-top: 5px;
     margin-bottom: 20px;
     box-shadow: rgba(0, 0, 0,.1) 0 - 1px 0 0 inset;
     border-radius: 5px;
     position: relative;
 }
 
-.doctor-search-box>img {
-    border: 1px solid #ddd;
-    border-right: none;
-    height: 40px;
-    padding-left: 5px;
-}
 .doctor-search-box .fa.fa-search {
     position: absolute;
     right: 10px;
@@ -149,7 +143,6 @@
 }
 .home-search-container {
     /* width: 712px; */
-    padding: 20px 0;
     display: flex;
     align-items: center;
 }
